# Car-Rental

./: .gitignore  Car_Rental_Administration_System_IET_Report.docx  Car_Rental_IET_Report_Compiled.docx  GUIDE.md  README.md  generate_report.py  pyproject.toml  run.bat  run.sh  setup.py
car_rental_cli/: __init__.py  main.py
client/: index.html  package-lock.json  package.json  tailwind.config.js
client/src/: App.jsx  index.css
client/src/components/: Footer.jsx  Navbar.jsx  ProtectedRoute.jsx  RatingStars.jsx
client/src/context/: AuthContext.jsx
client/src/pages/: AboutUs.jsx  AdminDashboard.jsx  BookingCheckout.jsx  ContactUs.jsx  Home.jsx  Login.jsx  ManageBookings.jsx  ManageCustomers.jsx  ManageVehicles.jsx  MyBookings.jsx  Profile.jsx  Register.jsx  Reports.jsx  Terms.jsx  VehicleDetail.jsx  Vehicles.jsx
client/src/utils/: api.js  invoiceGenerator.js
server/: .env.example  package-lock.json  package.json  server.js
server/config/: db.js
server/controllers/: authController.js  bookingController.js  paymentController.js  reportController.js  reviewController.js  vehicleController.js
server/middleware/: authMiddleware.js
server/models/: Booking.js  Payment.js  Review.js  User.js  Vehicle.js
server/routes/: authRoutes.js  bookingRoutes.js  paymentRoutes.js  reportRoutes.js  reviewRoutes.js  vehicleRoutes.js
server/scripts/: seed.js
server/utils/: emailHelper.js
