[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "car-rental-admin-cli"
version = "1.0.0"
description = "CLI tool to manage Bharath Car Rental Admin System"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
]
